src/App.css
/* CSS RESET - undo the varying default styling applied by web browsers to HTML elements */

/* Box sizing rules */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Remove default margin */
body,
h1,
h2,
h3,
h4,
p,
figure,
blockquote,
dl,
dd {
  margin: 0;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role="list"],
ol[role="list"] {
  list-style: none;
}

/* Set core root defaults */
html:focus-within {
  scroll-behavior: smooth;
}

/* Set core body defaults */
body {
  min-height: 100vh;
  text-rendering: optimizeSpeed;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img,
picture {
  max-width: 100%;
  display: block;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
  font: inherit;
}

/* sr-only is for screen reader use only -
The element will be visually hidden but will still be read by screen reader technology. */
.sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap;
    border: 0;
    display: none;
    z-index: -1;
    text-indent: -9999px;
}

/*  A big shout out to Andy Bell at https://andy-bell.co.uk/about/
    For his great article " A Modern CSS Reset " I recommend giving it a read at https://andy-bell.co.uk/a-modern-css-reset/
*/


/* MY CUSTOM CSS RULES BELOW */

/* Reusable Custom CSS Variables */
:root {
  --color-mainBg: hsl(217, 54%, 11%);

  --color1: #495E57; /* RENAME ALL VARIABLE WITH SEMANTIC NAMES */
  --color2: #F4CE14;
  --color3: #EE9972;
  --color4: #FBDABB;
  --color5: #EDEFEE;
  --color6: #333333;
}

.flex {
    display: flex;
    justify-content: center;
}

.container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 70%;
}

section {
  padding: 2rem 0;
}

/* Divs & Containers */

body {
  font-family: 'Karla', sans-serif;
}

/* HEADER SECTION - CSS */

.header {
  display: flex;
  justify-content: center;
  background-color: #FFF;
  width: 100%;
  overflow: hidden;
}

.header__logo {
  padding: 1rem 0;
}

/* NAV SECTION - CSS */

.nav__link-list {
  display: flex;
  flex-direction: row;
  text-decoration: none;
}

.nav__link-list li {
  list-style: none;
  padding-left: 10px;
}

.nav__link-list li a:hover {
  color: #495E57;
  background-color: #F4CE14;
  padding: 30px 10px;
}

.nav__link-list li a {
  color: black;
  font-weight: 800;
  text-decoration: none;
  padding: 0 10px 0 10px;
}

.hero {
  background-color: #495E57;
  padding: 0 0 0 0; /* removes my reusable padding that is applied to all section selectors */
}

.hero__text-wrapper{
  max-width: 300px; /* check responsivness later  maybe add a min-width also */
  color: #EDEFEE;
  /* align-self: flex-start; */
}

.hero__title {
  font-size: 64px;
  font-family: 'Markazi Text', serif;
  color: #F4CE14;
}

.hero__sub-title {
  font-size: 40px;
  font-family: 'Markazi Text', serif;
}

.hero__body-text {
  font-size: 18px;
  font-family: 'Markazi Text', serif;
}

.hero__btn {
  margin: 1.5rem 0 1rem 0;
}

.hero-img--desktop {
  max-height: 350px;
}

.hero-img--mobile {
  display: none;  /* Hides mobile hero-img on larger screens */
}

.btn--primary {
  display: inline-block;
  color: black;
  background-color: yellow;
  padding: 15px 18px;
  border-radius: 16px;
  font-weight: bold;
  border: 2px solid yellow;
  text-decoration: none;
  text-align: center;
}

.btn--primary:hover {
  background-color: yellow;
  opacity: 0.9;
  border: 2px solid black;
  cursor: pointer;
}

.specials {
  flex-direction: column;
  align-items: center;
  background-color: #F5F5F5;
}

.specials__title {
  font-size: 40px;
}

.specials__3-card-wrapper {
  margin-top: 3rem;
}

.specials__card {
  /* height: 439px; */
  width: 264px;
  border-radius: 16px;
  background-color: #EDEFEE;
}

.specials__card__img {
  border-radius: 16px 16px 0 0;
  max-height: 175px;
  width: 100%; /* ensures img stretch to full width of card */
}

.specials__card__text-wrapper {
  padding: 1.25rem;
}

.specials__card__title-wrapper {
  display: flex;
  justify-content: space-between;
  font-size: 18px;
  font-weight: bold;
}

.specials__card__title-price {
  color: #EE9972;
}

.specials__card__body-text {
  margin: 1rem 0;
  min-height: 110px;
  color: #495E57;
}

.specials__card__delivery-text {
  font-weight: bold;
}

.specials__card__delivery-text img {
  display: inline;
  padding-left: 1rem;
}

.footer {
  background-color: #D9D9D9;
  padding: 4rem 0;
}

.footer .container {
  align-items: flex-start;
}

.footer__link-list {
  margin-top: 0;
}

.footer__link-list li {
  list-style: none;
  padding-right: 20px;
  padding-top: 0;
}

.footer__link-list li a {
  color: black;
  font-weight: 800;
  text-decoration: none;
}

.footer__list-title {
  font-size: 20px;
  font-weight: 800;
  color:#495E57;
  margin-bottom: 1.25rem;
}

.footer__logo {
  max-height: 180px;
}

/* Reservation / Booking Related CSS */

.reservation {
  flex-direction: column;
  align-items: center;
  padding-top: 0;
}

.reservation-form-wrapper {
  flex-direction: column;
  max-width: 500px;
  margin-bottom: 6rem; /* REMOVE ONCE TESTING IS FINISHED */
}

.reservation-form-wrapper h1 {
  margin-bottom: 1rem;
}

.reservation-form {
  flex-direction: column;
}

.reservation-form label {
  /* margin-top: 0.5rem; */
  margin-bottom: 0.2rem;
  font-weight: 800;
}

.reservation-form input,
.reservation-form select
 {
  margin-bottom: 0; /* changed from 1rem for testing */
  padding: 0.2rem 0 0.2rem 0.5rem;
}

.reservation-form fieldset {
  display: flex;
  flex-direction: column;
  margin-bottom: 1rem;
}

.reservation-confirmation-wrapper {
  flex-direction: column;
  max-width: 500px;
}

.reservation-confirmation-wrapper {
  flex-direction: column;
  max-width: 290px;
}

.btn-form {
  width: 100%;
  margin-top: 1rem;
}

.error-div {
  height: 1rem;
}

.error-message {
  font-size: 0.8rem;
  color: red;
  text-align: right;
  margin-top: 0.2rem;

}

.reservation-confirmation-wrapper a {
  margin-top: 25px;
}

.reservation-confirmation-wrapper h1 {
  text-align: center;
}

.reservation-confirmation-wrapper h2,
.reservation-confirmation-wrapper h3 {
  margin: 1.5rem 0 1rem 0;
}

.reservation-confirmation-wrapper .comment {
  margin: 1rem 0 0 0;
}

.reservation-confirmation-wrapper .ourContactDetails {
  margin: 1rem 0 0 0;
}

.bannerMinimal {
  flex-direction: column;
  margin-bottom: 2rem;
  background-color: #8C8879;
  min-height:100px;
  width: 100%;
}

.bannerMinimal__title {
  color: var(--color2);
  font-size: 40px;
  padding-left: 1.5rem;
}

.bannerMinimal__sub-title {
  color: var(--color5);
  font-size: 25px;
  padding-left: 1.5rem;
}

.icon--confimation-tick {
  margin-top: 1rem;
  fill:#549712;
  height: 60px;
}

.testimonials {
  background-color: var(--color1);
  flex-direction: column;
  align-items: center;
}

.testimonials__heading {
  color: var(--color2)
}

.testimonials-card-wrapper {
  width: 100%;
  justify-content: space-between;
}

.testimonials__card {
  flex-direction: column;
  align-items: center;
  width: 250px;
  padding: 0 0.8rem 0.8rem 0.8rem;
  border-radius: 16px;
  background-color: #FFF;
}

.card__avatar {
  border-radius: 1000px;
  margin: 1rem 0;
  width: 50%;
}

.review-text {
  margin-top: 0.5rem;
}

/*
font-family: 'Karla', sans-serif;
font-family: 'Markazi Text', serif;
*/

@media screen and (max-width: 500px) {

  .container {
    width: 85%;
  }

  /* New Code */

  .hero {
    padding: 1.5rem 0;
  }

  .hero .container {
    flex-direction: column;
  }

  .hero-img--desktop {
    display: none; /* Hides desktop hero-img on smaller screens */
  }

  .hero-img--mobile {
    display: block;
  }

  .hero__title {
    line-height: 0.8;
  }

  .hero__body-text {
    margin-right: 20px; /* Allows body text to have less visual width while not affecting the parent flex container positioning */
  }

  .specials__3-card-wrapper {
    flex-direction: column;
  }

  .specials__card {
    margin-bottom: 1.5rem;
    width: 290px; /* Increased from 264px on larger screens */
  }

  .footer .container {
    flex-direction: column;
  }

  .footer__logo {
    display: none;
  }

  /* Update properly later */
  Nav {
    display: none;
  }
}

